--- a/sic/pubspec.yaml
+++ b/sic/pubspec.yaml
@@ -35,10 +35,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
+  image_picker: ^1.1.2
+  permission_handler: ^11.3.1
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  animated_background: ^2.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -61,6 +65,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - "img/cardImage.png"
+      - "img/processimage.png"
+      - "img/imgSemzoom1.jpeg"
+      - "img/imgSemzoom2.jpeg"
+      - "img/imgSemzoom3.jpeg"
+      - "img/imgComzoom1.jpeg"
+      - "img/imgComzoom2.jpeg"
+      - "img/imgComzoom3.jpeg"
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
