--- a/sic/pubspec.yaml
+++ b/sic/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
   carousel_slider: ^5.0.0
+  shared_preferences: ^2.5.2
+  pdf: ^3.11.3
+  path_provider: ^2.1.5
+  open_file: ^3.5.10
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
